[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "DPE_MVS"
version = "0.0.1"
description = "Python bindings for DPE-MVS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "opencv-python",
]

[tool.scikit-build.build]
verbose = false

[tool.scikit-build.sdist]
include = [
  "CMakeLists.txt",
  "pyproject.toml",
  "csrc/**",
  "src/DPE_MVS/**",
]

[tool.scikit-build.cmake.define]
DPE_CUDA_ARCHS = "86"

[tool.scikit-build.cmake]
build-type = "Release"
